0.2.0 Basic configurable schema mapping
* added schema mapping language
* added parser and validator for it
* toString mapping
* toJson mapping